--- a/Dockerfile.gpu
+++ b/Dockerfile.gpu
@@ -2,24 +2,16 @@
 # This image includes TensorFlow 2.16+ with full GPU support out-of-the-box
 FROM nvcr.io/nvidia/tensorflow:24.08-tf2-py3
 
-# Install additional Python dependencies
-RUN pip install --no-cache-dir \
-    pandas==2.2.2 \
-    numpy==1.26.4 \
-    pyarrow==15.0.2 \
-    python-dateutil==2.9.0.post0 \
-    tzdata==2024.1 \
-    requests==2.32.3 \
-    tqdm==4.66.4 \
-    scipy==1.12.0 \
-    scikit-learn==1.4.2 \
-    matplotlib==3.8.4 \
-    catboost==1.2.5 \
-    prophet==1.1.5
+RUN pip install "numba<0.61"
+
+
+# Copy requirements and install additional Python dependencies
+COPY requirements.txt .
+RUN pip install --no-cache-dir -r requirements.txt
 
 # Install RAPIDS for GPU-accelerated preprocessing (optional)
 RUN pip install --no-cache-dir \
-    cudf-cu12==24.8.* \
+    cudf-cu12==24.06.* \
     cupy-cuda12x \
     --extra-index-url https://pypi.nvidia.com || echo "RAPIDS installation skipped (optional)"
 
