--- a/requirements.txt
+++ b/requirements.txt
@@ -3,7 +3,7 @@
 # =============================================================================
 pandas==2.2.2                    
 numpy==1.26.4                    
-pyarrow==15.0.2                  
+pyarrow==16.1.0                  
 python-dateutil==2.9.0.post0     
 tzdata==2024.1                   
 
@@ -22,13 +22,13 @@ scipy==1.12.0
 # =============================================================================
 # VISUALIZATION
 # =============================================================================
-matplotlib==3.8.4                              
+matplotlib==3.8.4
 
 # =============================================================================
-# GPU ACCELERATION (optional - only for preprocessing)
+# SYSTEM MONITORING (for benchmarking)
 # =============================================================================
-# cudf-cu12==24.8.*              # GPU-accelerated pandas (install via NVIDIA index)
-# cupy-cuda12x                   # GPU-accelerated numpy (install via NVIDIA index)
+psutil==5.9.8
+gputil==1.4.0                              
 
 # =============================================================================
 # DASHBOARD
